script/firewall.txt
# Generated by iptables-save v1.3.5 on Thu Jun  5 20:46:16 2008
*mangle
:PREROUTING ACCEPT [302572604:161523606743]
:INPUT ACCEPT [54988740:29969539610]
:FORWARD ACCEPT [247463367:131549246382]
:OUTPUT ACCEPT [53901695:21652379753]
:POSTROUTING ACCEPT [301369863:153202774975]
:MYSHAPER-IN - [0:0]
:MYSHAPER-OUT - [0:0]
-A PREROUTING -i eth1 -j MYSHAPER-IN 
-A OUTPUT -d 192.168.1.2 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x34 
-A OUTPUT -d 192.168.1.3 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x35 
-A OUTPUT -d 192.168.1.4 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x36 
-A OUTPUT -d 192.168.1.5 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x37 
-A OUTPUT -d 192.168.1.6 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x38 
-A OUTPUT -d 192.168.1.7 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x39 
-A OUTPUT -d 192.168.1.8 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3a 
-A OUTPUT -d 192.168.1.9 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3b 
-A OUTPUT -d 192.168.1.10 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3c 
-A OUTPUT -d 192.168.1.11 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3d 
-A OUTPUT -d 192.168.1.12 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3e 
-A OUTPUT -d 192.168.1.13 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x3f 
-A OUTPUT -d 192.168.1.14 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x40 
-A OUTPUT -d 192.168.1.15 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x41 
-A OUTPUT -d 192.168.1.16 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x42 
-A OUTPUT -d 192.168.1.17 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x43 
-A OUTPUT -d 192.168.1.18 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x44 
-A OUTPUT -d 192.168.1.19 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x45 
-A OUTPUT -d 192.168.1.20 -o eth0 -p tcp -m tcp --sport 8080 -j MARK --set-mark 0x46 
-A POSTROUTING -o eth1 -j MYSHAPER-OUT 
-A MYSHAPER-IN -p ! tcp -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p tcp -m tcp --dport 22 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -p tcp -m tcp --sport 22 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -p tcp -m tcp --dport 22222 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -p tcp -m tcp --sport 22222 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -p udp -m udp --dport 27010:27030 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -p udp -m udp --sport 27010:27030 -j MARK --set-mark 0x20 
-A MYSHAPER-IN -d 10.0.11.139 -p tcp -m tcp --sport 80 -j MARK --set-mark 0x22 
-A MYSHAPER-IN -p icmp -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p udp -j MARK --set-mark 0x1f 
-A MYSHAPER-IN -p tcp -m tcp --dport 53 -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p tcp -m tcp --sport 53 -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p udp -m udp --dport 53 -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p udp -m udp --sport 53 -j MARK --set-mark 0x1e 
-A MYSHAPER-IN -p tcp -m length --length 0:64 -j MARK --set-mark 0x1f 
-A MYSHAPER-IN -p tcp -m tcp --dport 40411:40413 -j MARK --set-mark 0x70 
-A MYSHAPER-IN -p udp -m udp --dport 40411:40413 -j MARK --set-mark 0x70 
-A MYSHAPER-IN -m mark --mark 0x0 -j MARK --set-mark 0x23 
-A MYSHAPER-IN -j IMQ --todev 0
-A MYSHAPER-OUT -p tcp -m tcp --dport 20 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --dport 21 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --sport 20 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --sport 21 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -m layer7 --l7proto ftp -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --dport 5190 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p udp -m udp --dport 5190 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --sport 8074 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --dport 8074 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --dport 6112:6119 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --dport 6112:6119 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --dport 4000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --dport 4000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 6112:6119 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --sport 6112:6119 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 4000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --sport 4000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -m layer7 --l7proto counterstrike-source -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --dport 27010:27030 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --sport 27010:27030 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 5273 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 7002 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --dport 44000:44500 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --sport 44000:44500 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p udp -m udp --dport 27910:27996 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --dport 27910:27996 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --dport 22 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 22 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --dport 22222 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 22222 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 44000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --sport 6000 -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -m layer7 --l7proto ssh -j MARK --set-mark 0x16 
-A MYSHAPER-OUT -p tcp -m tcp --dport 25 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --sport 110 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --sport 995 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -m layer7 --l7proto smtp -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -m layer7 --l7proto pop3 -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p tcp -m tcp --sport 80 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --dport 80 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --sport 443 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --dport 443 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p tcp -m tcp --sport 3690 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p udp -m udp --sport 3690 -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -m layer7 --l7proto http -j MARK --set-mark 0x18 
-A MYSHAPER-OUT -p icmp -j MARK --set-mark 0x14 
-A MYSHAPER-OUT -p udp -j MARK --set-mark 0x17 
-A MYSHAPER-OUT -p udp -m udp --sport 53 -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -p udp -m udp --dport 53 -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -p tcp -m tcp --sport 53 -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -p tcp -m tcp --dport 53 -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -m layer7 --l7proto dns -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -p tcp -m length --length 0:64 -j MARK --set-mark 0x15 
-A MYSHAPER-OUT -p udp -m udp --sport 6340:6350 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p tcp -m tcp --sport 6340:6350 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p udp -m udp --dport 6340:6350 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p tcp -m tcp --dport 6340:6350 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p udp -m udp --sport 6662 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p tcp -m tcp --sport 6661 -j MARK --set-mark 0xa 
-A MYSHAPER-OUT -p udp -m udp --sport 6881:6999 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -p tcp -m tcp --sport 6881:6999 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -p udp -m udp --dport 6881:6999 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -p tcp -m tcp --dport 6881:6999 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -p udp -m udp --sport 30000:31000 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -p tcp -m tcp --sport 30000:31000 -j MARK --set-mark 0xb 
-A MYSHAPER-OUT -m layer7 --l7proto bittorrent -j MARK --set-mark 0x19 
-A MYSHAPER-OUT -m layer7 --l7proto edonkey -j MARK --set-mark 0x19 
-A MYSHAPER-OUT -m layer7 --l7proto directconnect -j MARK --set-mark 0x19 
-A MYSHAPER-OUT -m layer7 --l7proto gnutella -j MARK --set-mark 0x19 
-A MYSHAPER-OUT -p tcp -m tcp --sport 40411:40413 -j MARK --set-mark 0x6f 
-A MYSHAPER-OUT -p udp -m udp --sport 40411:40413 -j MARK --set-mark 0x6f 
-A MYSHAPER-OUT -m mark --mark 0x0 -j MARK --set-mark 0x19 
COMMIT
# Completed on Thu Jun  5 20:46:16 2008
# Generated by iptables-save v1.3.5 on Thu Jun  5 20:46:16 2008
*filter
:INPUT DROP [3:217]
:FORWARD DROP [1:48]
:OUTPUT DROP [0:0]
:drop-and-log-it - [0:0]
:lstat - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 192.168.1.0/255.255.255.0 -i eth0 -j ACCEPT 
-A INPUT -s 192.168.1.0/255.255.255.0 -i eth1 -j drop-and-log-it 
-A INPUT -d 10.0.11.139 -i eth1 -p icmp -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 68 --dport 67 -j ACCEPT 
-A INPUT -i eth0 -p udp -m udp --sport 68 --dport 67 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 21 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 22222 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 25 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 80 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 110 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 113 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 443 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 3306 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 3690 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 4000 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 5080 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 6112:6119 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 6881:6999 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 8888 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 11211 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 27015 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 27950:27980 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 30000:31000 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 37015 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 40000:46100 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 55555 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 54400 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 3690 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 4000 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 5080 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 6112:6119 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 8888 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 27010:27030 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 27950:27980 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 30000:31000 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 37015 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 40000:46100 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 55555 -j ACCEPT 
-A INPUT -d 10.0.11.139 -i eth1 -p udp -m state --state NEW,RELATED,ESTABLISHED -m udp --dport 54400 -j ACCEPT 
-A INPUT -j drop-and-log-it 
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu 
-A FORWARD -s 192.168.1.2 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.3 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.4 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.5 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.6 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.7 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.8 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.9 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.10 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.11 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.12 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.13 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.14 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.15 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.16 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.17 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.18 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.19 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.20 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.21 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.22 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.23 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.24 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.25 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.26 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -s 192.168.1.27 -p tcp -m tcp --dport 1024:65535 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 300 --connlimit-mask 32 -j drop-and-log-it 
-A FORWARD -d 192.168.1.10 -p tcp -m tcp --dport 30000:30100 -j ACCEPT 
-A FORWARD -d 192.168.1.10 -p udp -m udp --dport 30000:30100 -j ACCEPT 
-A FORWARD -d 192.168.1.11 -p tcp -m tcp --dport 30101:30200 -j ACCEPT 
-A FORWARD -d 192.168.1.11 -p udp -m udp --dport 30101:30200 -j ACCEPT 
-A FORWARD -d 192.168.1.12 -p tcp -m tcp --dport 30201:30300 -j ACCEPT 
-A FORWARD -d 192.168.1.12 -p udp -m udp --dport 30201:30300 -j ACCEPT 
-A FORWARD -d 192.168.1.13 -p tcp -m tcp --dport 30301:30400 -j ACCEPT 
-A FORWARD -d 192.168.1.13 -p udp -m udp --dport 30301:30400 -j ACCEPT 
-A FORWARD -d 192.168.1.14 -p tcp -m tcp --dport 30401:30500 -j ACCEPT 
-A FORWARD -d 192.168.1.14 -p udp -m udp --dport 30401:30500 -j ACCEPT 
-A FORWARD -d 192.168.1.15 -p tcp -m tcp --dport 30501:30600 -j ACCEPT 
-A FORWARD -d 192.168.1.15 -p udp -m udp --dport 30501:30600 -j ACCEPT 
-A FORWARD -d 192.168.1.19 -p tcp -m tcp --dport 4000 -j ACCEPT 
-A FORWARD -d 192.168.1.19 -p udp -m udp --dport 4000 -j ACCEPT 
-A FORWARD -j lstat 
-A FORWARD -i eth1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i eth0 -o eth1 -j ACCEPT 
-A FORWARD -j drop-and-log-it 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -s 10.0.11.139 -d 192.168.1.0/255.255.255.0 -o eth0 -j ACCEPT 
-A OUTPUT -s 192.168.1.1 -d 192.168.1.0/255.255.255.0 -o eth0 -j ACCEPT 
-A OUTPUT -d 192.168.1.0/255.255.255.0 -o eth1 -j drop-and-log-it 
-A OUTPUT -s 10.0.11.139 -o eth1 -j ACCEPT 
-A OUTPUT -s 192.168.1.1 -d 255.255.255.255 -o eth0 -p tcp -m tcp --sport 67 --dport 68 -j ACCEPT 
-A OUTPUT -s 192.168.1.1 -d 255.255.255.255 -o eth0 -p udp -m udp --sport 67 --dport 68 -j ACCEPT 
-A OUTPUT -s 10.0.11.139 -o eth1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --sport 20 -j ACCEPT 
-A OUTPUT -j drop-and-log-it 
-A drop-and-log-it -j REJECT --reject-with icmp-port-unreachable 
-A lstat -s 192.168.1.2 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.2 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.3 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.3 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.4 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.4 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.5 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.5 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.6 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.6 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.7 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.7 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.8 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.8 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.9 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.9 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.10 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.10 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.11 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.11 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.12 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.12 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.13 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.13 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.14 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.14 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.15 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.15 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.16 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.16 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.17 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.17 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.18 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.18 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.19 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.19 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A lstat -s 192.168.1.20 -i eth0 -j ACCEPT 
-A lstat -d 192.168.1.20 -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Thu Jun  5 20:46:16 2008
# Generated by iptables-save v1.3.5 on Thu Jun  5 20:46:16 2008
*nat
:PREROUTING ACCEPT [1399541:131683024]
:POSTROUTING ACCEPT [658111:66518707]
:OUTPUT ACCEPT [28100:2973558]
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30000:30100 -j DNAT --to-destination 192.168.1.10 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30000:30100 -j DNAT --to-destination 192.168.1.10 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30101:30200 -j DNAT --to-destination 192.168.1.11 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30101:30200 -j DNAT --to-destination 192.168.1.11 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30201:30300 -j DNAT --to-destination 192.168.1.12 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30201:30300 -j DNAT --to-destination 192.168.1.12 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30301:30400 -j DNAT --to-destination 192.168.1.13 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30301:30400 -j DNAT --to-destination 192.168.1.13 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30401:30500 -j DNAT --to-destination 192.168.1.14 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30401:30500 -j DNAT --to-destination 192.168.1.14 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 30501:30600 -j DNAT --to-destination 192.168.1.15 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 30501:30600 -j DNAT --to-destination 192.168.1.15 
-A PREROUTING -d 10.0.11.139 -i eth1 -p udp -m udp --dport 4000 -j DNAT --to-destination 192.168.1.19:4000 
-A PREROUTING -d 10.0.11.139 -i eth1 -p tcp -m tcp --dport 4000 -j DNAT --to-destination 192.168.1.19:4000 
-A POSTROUTING -s 192.168.1.2 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.3 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.4 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.5 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.6 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.7 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.8 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.9 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.10 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.11 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.12 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.13 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.14 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.15 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.16 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.17 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.18 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.19 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.20 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.21 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.22 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.23 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.24 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.25 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.26 -o eth1 -j SNAT --to-source 10.0.11.139 
-A POSTROUTING -s 192.168.1.27 -o eth1 -j SNAT --to-source 10.0.11.139 
COMMIT
# Completed on Thu Jun  5 20:46:16 2008
